--- a/app/src/main/res/layout/activity_forgot_password_page.xml
+++ b/app/src/main/res/layout/activity_forgot_password_page.xml
@@ -4,6 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#363837"
     tools:context=".ForgotPasswordPage">
 
+    <Button
+        android:id="@+id/ForgotPasswordButton"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/rounded_button"
+        android:text="FORGOT PASSWORD"
+        android:elevation="10dp"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/EmailForgotPasswordEditText"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="@+id/EmailForgotPasswordEditText"
+        app:layout_constraintTop_toBottomOf="@+id/EmailForgotPasswordEditText"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/EmailForgotPasswordEditText"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="407dp"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
+        android:textColor="#a0000000"
+        android:textColorHint="#a0000000"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
