--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#363837"
     tools:context=".SignUpPage">
 
     <EditText
         android:id="@+id/EmailSignUpEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="270dp"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="#a0000000"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,9 +24,12 @@
 
     <EditText
         android:id="@+id/PasswordSignUpEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:textColorHint="#a0000000"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -32,11 +39,14 @@
 
     <EditText
         android:id="@+id/RePasswordEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
         android:hint="Re-enter Password"
+        android:textColorHint="#a0000000"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/PasswordSignUpEditText"
         app:layout_constraintStart_toStartOf="@+id/PasswordSignUpEditText"
@@ -44,10 +54,12 @@
 
     <Button
         android:id="@+id/SignUpButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Sign Up"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/rounded_button"
         app:layout_constraintEnd_toEndOf="@+id/RePasswordEditText"
         app:layout_constraintStart_toStartOf="@+id/RePasswordEditText"
         app:layout_constraintTop_toBottomOf="@+id/RePasswordEditText" />
@@ -57,7 +69,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Already Registered?Login Here"
+        android:textColor="#FFFFFF"
+        android:text="Already Registered? Login Here."
         app:layout_constraintEnd_toEndOf="@+id/SignUpButton"
         app:layout_constraintStart_toStartOf="@+id/SignUpButton"
         app:layout_constraintTop_toBottomOf="@+id/SignUpButton" />
