--- a/app/src/main/res/layout/activity_user_details_input.xml
+++ b/app/src/main/res/layout/activity_user_details_input.xml
@@ -4,36 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#363837"
     tools:context=".UserDetailsInput">
 
     <Button
         android:id="@+id/DoneButton"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button"
         android:text="Done"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/MobilenoEditText"
         app:layout_constraintStart_toStartOf="@+id/MobilenoEditText"
-        app:layout_constraintTop_toBottomOf="@+id/MobilenoEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/MobilenoEditText"
+        app:layout_constraintVertical_bias="0.21" />
 
     <EditText
         android:id="@+id/FullNameEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="340dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:hint="Full Name"
         android:inputType="textPersonName"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/MobilenoEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
         android:hint="Mobile Number"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="@+id/FullNameEditText"
