--- a/app/src/main/res/layout/activity_course_display_page.xml
+++ b/app/src/main/res/layout/activity_course_display_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:id="@+id/drawerlayout"
+    android:id="@+id/drawerlayout2"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
             layout="@layout/toolbar"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/HomeRecyclerView"
+            android:id="@+id/CourseRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
@@ -27,10 +27,9 @@
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/navigationview"
+        android:id="@+id/navigationview2"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu"
         />
 
 </androidx.drawerlayout.widget.DrawerLayout>
-
