--- a/app/src/main/res/layout/activity_forgot_password_page.xml
+++ b/app/src/main/res/layout/activity_forgot_password_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#363837"
+    android:background="@drawable/background_start"
     tools:context=".ForgotPasswordPage">
 
     <Button
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:background="@drawable/rounded_button"
-        android:text="FORGOT PASSWORD"
         android:elevation="10dp"
+        android:text="RESET MY PASSWORD"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EmailForgotPasswordEditText"
@@ -38,4 +38,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
