--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#363837"
+    android:background="@drawable/background_start"
     tools:context=".SignUpPage">
 
     <EditText
@@ -74,4 +74,14 @@
         app:layout_constraintEnd_toEndOf="@+id/SignUpButton"
         app:layout_constraintStart_toStartOf="@+id/SignUpButton"
         app:layout_constraintTop_toBottomOf="@+id/SignUpButton" />
+
+    <ProgressBar
+        android:id="@+id/SignUpProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:visibility="invisible"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/SignUpButton"
+        app:layout_constraintStart_toEndOf="@+id/SignUpButton"
+        app:layout_constraintTop_toTopOf="@+id/SignUpButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
