--- a/app/src/main/res/layout/activity_upload_download_page.xml
+++ b/app/src/main/res/layout/activity_upload_download_page.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/drawerlayout3"
+    android:background="@drawable/backgroundhome"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
